feat: add healthcheck
