# python-custom-image-processing-container/consumer/generated/src/openapi_server/apis/default_api_base.py
@@ -3,6 +3,7 @@
 from typing import ClassVar, Dict, List, Tuple  # noqa: F401
 
 from openapi_server.models.error import Error
+from openapi_server.models.health_check200_response import HealthCheck200Response
 from openapi_server.models.process_image200_response import ProcessImage200Response
 from openapi_server.models.process_image_request import ProcessImageRequest
 
@@ -18,4 +19,11 @@ class BaseDefaultApi:
         process_image_request: ProcessImageRequest,
     ) -> ProcessImage200Response:
         """Called when a new image is available for processing. The primary image processing worker waits for the response to determine if the image was processed and where it was saved."""
+        ...
+
+
+    async def health_check(
+        self,
+    ) -> HealthCheck200Response:
+        """Simple health check to verify that the custom image processing container is running."""
         ...
